--- a/Jerrybaring1/Jerrybaring1/Views/MainView.axaml
+++ b/Jerrybaring1/Jerrybaring1/Views/MainView.axaml
@@ -38,8 +38,16 @@
             <StackPanel
                 Height="50"
                 VerticalAlignment="Top"
-                Background="#00d48d"
+                Background="Blue"
                 Orientation="Horizontal">
+                <Button Background="Transparent">
+                    <Path Data="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" Fill="Black" />
+                    <Button.Styles>
+                        <Style Selector="Button:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+                            <Setter Property="Background" Value="Transparent" />
+                        </Style>
+                    </Button.Styles>
+                </Button>
                 <Button Classes="tommy" Content="시리즈" />
                 <Button Classes="tommy" Content="세미나" />
                 <Button Classes="tommy" Content="톡" />
