--- a/Jerrybaring1/Jerrybaring1/Views/Follin1.axaml
+++ b/Jerrybaring1/Jerrybaring1/Views/Follin1.axaml
@@ -3,115 +3,88 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Jerrybaring1"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="using:Jerrybaring1.ViewModels"
     d:DesignHeight="450"
     d:DesignWidth="800"
+    x:DataType="vm:MainViewModel"
     mc:Ignorable="d">
-    <StackPanel
-        VerticalAlignment="Top"
-        Background="#00d48d"
-        Orientation="Horizontal">
 
-        <Button
-            Margin="0,0,5,0"
-            Background="Transparent"
-            Content="시리즈"
-            FontSize="12"
-            FontWeight="Bold">
-            <Button.Styles>
-                <Style Selector="Button:pointerover /template/ ContentPresenter#PART_ContentPresenter">
-                    <Setter Property="Background" Value="Transparent" />
-                </Style>
-            </Button.Styles>
-        </Button>
-
-        <Button
-            Margin="0,0,5,0"
-            Background="Transparent"
-            Content="세미나"
-            FontSize="12"
-            FontWeight="Bold">
-            <Button.Styles>
-                <Style Selector="Button:pointerover /template/ ContentPresenter#PART_ContentPresenter">
-                    <Setter Property="Background" Value="Transparent" />
-                </Style>
-            </Button.Styles>
-        </Button>
-
-        <Button
-            Margin="0,0,5,0"
-            Background="Transparent"
-            Content="톡"
-            FontSize="12"
-            FontWeight="Bold">
-            <Button.Styles>
-                <Style Selector="Button:pointerover /template/ ContentPresenter#PART_ContentPresenter">
-                    <Setter Property="Background" Value="Transparent" />
-                </Style>
-            </Button.Styles>
-        </Button>
-
+    <Grid RowDefinitions="50,*">
         <Border
-            Width="1"
-            Height="10"
-            Margin="0,0,5,0"
-            BorderBrush="Black"
-            BorderThickness="1" />
+            Grid.Row="0"
+            Background="#00d48d"
+            CornerRadius="6">
+            <Grid ColumnDefinitions="0.1*,3*,1*,3*,0.1*">
+                <StackPanel
+                    Grid.Column="1"
+                    VerticalAlignment="Center"
+                    Orientation="Horizontal"
+                    Spacing="15">
+                    <local:TopBarButton Content="시리즈" />
+                    <local:TopBarButton Content="세미나" />
+                    <local:TopBarButton Content="톡" />
+                    <local:TopBarButton Content="B2B" />
+                </StackPanel>
 
-        <Button
-            Margin="0,0,300,0"
-            Background="Transparent"
-            Content="B2B"
-            FontSize="11"
-            FontWeight="Medium">
-            <Button.Styles>
-                <Style Selector="Button:pointerover /template/ ContentPresenter#PART_ContentPresenter">
-                    <Setter Property="Background" Value="Transparent" />
-                </Style>
-            </Button.Styles>
-        </Button>
+                <Button
+                    Grid.Column="2"
+                    HorizontalAlignment="Center"
+                    Background="Transparent"
+                    Content="fol:in"
+                    Cursor="Hand"
+                    FontFamily="{StaticResource Ghana}"
+                    FontSize="25">
+                    <Button.Styles>
+                        <Style Selector="Button:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+                            <Setter Property="Background" Value="Transparent" />
+                        </Style>
+                    </Button.Styles>
+                </Button>
 
-        <Button
-            Margin="0,0,415,0"
-            Background="Transparent"
-            Content="fol:in"
-            FontSize="25"
-            FontWeight="ExtraBold">
-            <Button.Styles>
-                <Style Selector="Button:pointerover /template/ ContentPresenter#PART_ContentPresenter">
-                    <Setter Property="Background" Value="Transparent" />
-                </Style>
-            </Button.Styles>
-        </Button>
+                <StackPanel
+                    Grid.Column="3"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Orientation="Horizontal"
+                    Spacing="5">
+                    <local:RoundButton
+                        Background="Black"
+                        Command="{Binding AddCommand}"
+                        Content="멤버십 구독"
+                        Foreground="White" />
+                    <local:RoundButton Background="White" Content="로그인" />
+                    <local:IconButton PathData="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+                </StackPanel>
+            </Grid>
+        </Border>
 
-        <Button
-            Margin="0,0,5,0"
-            Background="Black"
-            Content="멤버십 구독"
-            FontSize="11"
-            FontWeight="Bold"
-            Foreground="White">
-            <Button.Styles>
-                <Style Selector="Button:pointerover /template/ ContentPresenter#PART_ContentPresenter">
-                    <Setter Property="Background" Value="Black" />
-                    <Setter Property="Foreground" Value="White" />
-                </Style>
-            </Button.Styles>
-        </Button>
+        <Grid Grid.Row="1" Background="Transparent">
+            <ScrollViewer HorizontalScrollBarVisibility="Visible">
+                <ItemsControl Margin="20,0,0,0" ItemsSource="{Binding LineCards}">
+                    <!--  itemsPanel은 기본적으로 수직으로 쌓기 때문에 수평으로 쌓으려고 itemsPanel에 스택패널을 재정의  -->
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel Orientation="Horizontal" Spacing="10" />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <!--  ItemTemplate / DataTemplate은 기본형태다 . 외워.  -->
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <local:LineButton
+                                Grid.Column="0"
+                                Background="#FF595F"
+                                JobText="{Binding Job}"
+                                LineText="{Binding Line}"
+                                NameText="{Binding Name}" />
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
 
-        <Button
-            Margin="0,0,5,0"
-            Background="White"
-            Content="로그인"
-            FontSize="11"
-            FontWeight="Bold"
-            Foreground="Black">
-            <Button.Styles>
-                <Style Selector="Button:pointerover /template/ ContentPresenter#PART_ContentPresenter">
-                    <Setter Property="Background" Value="White" />
-                </Style>
-            </Button.Styles>
-        </Button>
 
-    </StackPanel>
+        </Grid>
+    </Grid>
+
 </UserControl>
