--- a/Jerrybaring1/Jerrybaring1/Views/MainWindow.axaml
+++ b/Jerrybaring1/Jerrybaring1/Views/MainWindow.axaml
@@ -7,11 +7,11 @@
     xmlns:views="clr-namespace:Jerrybaring1.Views"
     xmlns:vm="using:Jerrybaring1.ViewModels"
     Title="Jerrybaring1"
-	Height="600"
-	Width="1100"
+    Width="1100"
+    Height="600"
     d:DesignHeight="450"
     d:DesignWidth="800"
     Icon="/Assets/avalonia-logo.ico"
     mc:Ignorable="d">
-    <views:MainView />
+    <views:Follin1 />
 </Window>
