--- a/Jerrybaring1/Jerrybaring1/Views/MainWindow.axaml
+++ b/Jerrybaring1/Jerrybaring1/Views/MainWindow.axaml
@@ -13,5 +13,5 @@
     d:DesignWidth="800"
     Icon="/Assets/avalonia-logo.ico"
     mc:Ignorable="d">
-    <views:Follin1 />
+    <views:MainView />
 </Window>
