--- a/Jerrybaring1/Jerrybaring1/Views/SeminarTapView.axaml
+++ b/Jerrybaring1/Jerrybaring1/Views/SeminarTapView.axaml
@@ -1,5 +1,5 @@
 <UserControl
-    x:Class="Jerrybaring1.Views.TalkView"
+    x:Class="Jerrybaring1.Views.SeminarTapView"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,5 +8,16 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
+
+    <ScrollViewer>
+        <ItemsControl ItemsSource="{Binding Seminars}">
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <local:NextSeminar />
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+    </ScrollViewer>
+
 
 </UserControl>
