--- a/Jerrybaring1/Jerrybaring1/Views/dummy.axaml
+++ b/Jerrybaring1/Jerrybaring1/Views/dummy.axaml
@@ -1,5 +1,5 @@
 <UserControl
-    x:Class="Jerrybaring1.dummy"
+    x:Class="Jerrybaring1.Views.dummy"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
